# imagecleanup

./: .gitignore  Cargo.toml  Dockerfile  README.md
docker/: Dockerfile  build.sh  imagecleanup
integration_test/: Dockerfile  test.sh
src/: imagecleanup.rs  lib.rs  main.rs  strategy.rs  test.rs
