[package]
name = "imagecleanup"
version = "1.1.1"
authors = ["Manatsawin Hanmongkolchai <manatsawin@gmail.com>"]
description = "Cleanup unused Docker images"
homepage = "https://github.com/whs/imagecleanup"
repository = "https://github.com/whs/imagecleanup.git"
license = "MIT"
readme = "README.md"
keywords = ["docker"]

[dependencies]
docker = { git = "https://github.com/whs/rust-docker.git" }
getopts = "^0.2"
log = "^0.3"
env_logger = "^0.3"

[profile.release]
lto = true
